jooby:run: allow to run on test classpath fix #3086